[optabs.c] Fix ICE when expanding single-threaded version of atomic_test_and_set

Backport from mainline
	2014-08-04  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/61713
	* gcc/optabs.c (expand_atomic_test_and_set): Do not try to emit
	move to subtarget in serial version if result is ignored.

From-SVN: r213954